tests/unknown_function_return_type/error.txt
Validation error: ./tests/unknown_function_return_type/unknown_function_return_type.fae:3
 No symbol `ThisTypeDoesNotExist` in the current scope
  3| fn function(): ThisTypeDoesNotExist {}
                    ^^^^^^^^^^^^^^^^^^^^
